@@ -10,7 +10,7 @@ function varargout=mmclab(cfg,type)
 %                                                                             %
 %               Research funded by NIH/NIGMS grant R01-GM114365               %
 %#############################################################################%
-%$Rev::      $2019.3$Date::                       $ by $Author::             $%
+%$Rev::      $2019.4$Date::                       $ by $Author::             $%
 %#############################################################################%
 %
 % Format:
